node-kit/k8s/nodejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-kit
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-kit
  template:
    metadata:
      labels:
        app: node-kit
    spec:
      containers:
      - name: node-kit
        image: 103cuong/node-kit
        livenessProbe:
            httpGet:
              path: /health
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 40
            periodSeconds: 3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
