node-kit/k8s/nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-kit
  namespace: production
spec:
  selector:
    app: node-kit
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  externalTrafficPolicy: Local
  type: LoadBalancer
